<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <com.atguigu.myownmusicapp.widget.ItemLayout
        android:id="@+id/itemNextPlay"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:text="@string/nextPlay"
        />
    <com.atguigu.myownmusicapp.widget.ItemLayout
        android:id="@+id/itemAddToFavorite"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:text="@string/addToFavorite"
        />
    <com.atguigu.myownmusicapp.widget.ItemLayout
        android:id="@+id/itemSongComment"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:text="@string/songComment"/>
    <com.atguigu.myownmusicapp.widget.ItemLayout
        android:id="@+id/itemSongInfo"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:text="@string/songInfo"/>
    <com.atguigu.myownmusicapp.widget.ItemLayout
        android:id="@+id/itemDownload"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:text="@string/download"/>
    <com.atguigu.myownmusicapp.widget.ItemLayout
        android:id="@+id/itemDeleteSong"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:text="@string/deleteSong"/>
</LinearLayout>