<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.LoginByQrCodeFragment">

    <TextView
        android:id="@+id/tvInfo"
        android:text="@string/pleaseSaveAndScanQrCode"
        android:textColor="@color/textviewColor"
        android:textSize="22sp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <ImageView
        android:id="@+id/ivQrCode"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:text="@string/hello_blank_fragment"
        android:contentDescription="@string/qrCode"
        tools:src="@drawable/ic_launcher_background"/>
    <Button
        android:id="@+id/btnSaveToGallery"
        android:text="@string/saveToGallery"
        android:backgroundTint="@color/purple_200"
        android:textSize="22sp"
        android:layout_marginHorizontal="16dp"
        android:textColor="@color/textviewColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="50dp"
        />
    <Button
        android:id="@+id/btnLogout"
        android:text="@string/logout"
        android:backgroundTint="@color/purple_200"
        android:textSize="22sp"
        android:layout_marginHorizontal="16dp"
        android:textColor="@color/textviewColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:visibility="gone"
        />
</FrameLayout>