<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.AboutActivity">

    <TextView
        android:id="@+id/textVtvIntroduction1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/refer"
        android:textSize="22sp"
        android:textColor="@color/textviewColor"
         />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aboutIntroduction"
        android:lineSpacingExtra="6dp"
        android:textIsSelectable="true"
        android:textColor="@color/textviewColor"
        android:textSize="20sp"
        />
    <TextView
        android:id="@+id/tvIntroduction2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/refer2"
        android:textSize="22sp"
        android:textColor="@color/textviewColor"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aboutIntroduction2"
        android:lineSpacingExtra="8dp"
        android:textIsSelectable="true"
        android:textSize="20sp"
        android:textColor="@color/textviewColor"
        />
</LinearLayout>