<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/clSongItem">
    <ImageView
        android:id="@+id/ivVolume"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:padding="8dp"
        android:src="@drawable/ic_volume"
        android:contentDescription="@string/ivVolume"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="visible"
        app:tint="@color/red" />
    <TextView
        android:id="@+id/tvSongName"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/testNewSong"
        android:singleLine="true"
        android:ellipsize="end"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        android:textSize="16sp"
        android:textColor="@color/textviewColor"
        android:gravity="center_vertical"
        android:maxWidth="200dp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/ivVolume"
        app:layout_constraintRight_toLeftOf="@id/tvSongAuthor"
        />
    <TextView
        android:id="@+id/tvSongAuthor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/testNewSongAuthor"
        android:textColor="@color/textviewColor"
        android:singleLine="true"
        android:ellipsize="end"
        android:textSize="12sp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toRightOf="@id/tvSongName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/ivDelete"/>
    <ImageView
        android:id="@+id/ivDelete"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:padding="8dp"
        android:src="@drawable/ic_clear"
        android:contentDescription="@string/ivClear"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>