<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clBase"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.PlayerActivity">
    <ImageView
        android:id="@+id/ivLyricsBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:contentDescription="@string/ivLyricsBackground"
        tools:background="#896161"
        android:background="@color/black"
        />
    <!-- Lyric   -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clLyric"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        android:paddingTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/clBottom"
        >
        <ImageView
            android:id="@+id/ivVolume"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_volume"
            android:contentDescription="@string/ivVolume"
            android:layout_marginTop="40dp"
            app:tint="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="29dp" />
        <SeekBar
            android:id="@+id/sbVolume"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="40dp"
            android:maxHeight="2dp"
            android:minHeight="2dp"
            android:progressDrawable="@drawable/seekbar_two_tone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/ivVolume"
            app:layout_constraintRight_toRightOf="parent"
            />
        <ImageView
            android:id="@+id/ivTranslation"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:visibility="gone"
            android:src="@drawable/ic_translation"
            android:contentDescription="@string/ivTranslation"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:padding="18dp"
            android:layout_marginStart="12dp" />
        <com.dirror.lyricviewx.LyricViewX
            android:id="@+id/lyricView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/ivVolume"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--播放器以上的主要部分-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clUpper"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="visible"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/clBottom"
        >
        <com.atguigu.myownmusicapp.widget.MarqueTextView
            android:id="@+id/tvName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:textSize="22sp"
            android:textColor="@color/white"
            android:text="@string/testMarque"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
        <TextView
            android:id="@+id/tvArtist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:singleLine="true"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:text="@string/testNewSongAuthor"
            app:layout_constraintTop_toBottomOf="@id/tvName"
            app:layout_constraintLeft_toLeftOf="@id/tvName"
            app:layout_constraintRight_toRightOf="@id/tvName"
            />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clMenu"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginTop="200dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            >
            <ImageView
                android:id="@+id/ivFavorite"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:padding="8dp"
                android:layout_marginStart="14dp"
                android:src="@drawable/ic_favorite_outline"
                android:contentDescription="@string/ivFavorite"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/ivComment"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                 />
            <ImageView
                android:id="@+id/ivComment"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:padding="8dp"
                android:layout_marginStart="14dp"
                android:src="@drawable/ic_comment"
                android:contentDescription="@string/ivComment"
                app:layout_constraintRight_toLeftOf="@id/ivMore"
                app:layout_constraintLeft_toRightOf="@id/ivFavorite"
                app:layout_constraintTop_toTopOf="@id/ivFavorite"
                app:layout_constraintHorizontal_bias="0.5"
                app:tint="@color/white" />
            <ImageView
                android:id="@+id/ivMore"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:padding="8dp"
                android:layout_marginStart="14dp"
                android:src="@drawable/ic_more"
                android:contentDescription="@string/ivMore"
                app:layout_constraintLeft_toRightOf="@id/ivComment"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/ivFavorite"
                app:layout_constraintHorizontal_bias="0.5"
                app:tint="@color/white"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
            android:id="@+id/includePlayerCover"
            layout="@layout/player_cover_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivNeedle"
            app:layout_constraintVertical_bias="0"
            android:layout_marginTop="-50dp"
             />
        <ImageView
            android:id="@+id/ivNeedle"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:src="@drawable/needle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/tvArtist"
            android:contentDescription="@string/needle" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--底部播放器-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clBottom"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <TextView
            android:id="@+id/tvCurrentTime"
            android:layout_width="40dp"
            android:layout_height="16dp"
            android:text="@string/zero"
            android:textColor="@color/white"
            android:layout_marginStart="10dp"
            app:layout_constraintLeft_toLeftOf="@id/sbPlay"
            app:layout_constraintTop_toBottomOf="@id/sbPlay"

            />
        <TextView
            android:id="@+id/tvDuration"
            android:layout_width="40dp"
            android:layout_height="20dp"
            android:text="@string/zero"
            android:textColor="#AFFFFFFF"
            android:layout_marginEnd="10dp"
            app:layout_constraintRight_toRightOf="@id/sbPlay"
            app:layout_constraintTop_toBottomOf="@id/sbPlay"
            />

        <SeekBar
            android:id="@+id/sbPlay"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:maxHeight="2dp"
            android:minHeight="2dp"
            android:secondaryProgress="80"
            android:progressDrawable="@drawable/seekbar_two_tone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/tvCurrentTime"
            app:layout_constraintBottom_toBottomOf="parent"
            >
            <ImageView
                android:id="@+id/ivMode"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:padding="8dp"
                android:layout_marginStart="16dp"
                android:src="@drawable/ic_bq_player_mode_circle"
                app:tint="@color/white"
                android:contentDescription="@string/ivMode"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />
            <ImageView
                android:id="@+id/ivPrev"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:padding="6dp"
                android:layout_marginStart="50dp"
                android:contentDescription="@string/ivPrev"
                android:src="@drawable/ic_prev"
                app:layout_constraintLeft_toRightOf="@id/ivMode"
                app:layout_constraintRight_toLeftOf="@id/ivPlay"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintTop_toTopOf="@id/ivMode"
                app:tint="@color/white"
                />
            <ImageView
                android:id="@+id/ivPlay"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:src="@drawable/ic_play_round"
                android:contentDescription="@string/ivPlay"
                app:layout_constraintLeft_toRightOf="@id/ivPrev"
                app:layout_constraintRight_toLeftOf="@id/ivNext"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintTop_toTopOf="@id/ivPrev"
                app:tint="@color/white"
                />
            <ImageView
                android:id="@+id/ivNext"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:padding="6dp"
                android:layout_marginEnd="50dp"
                android:src="@drawable/ic_next"
                android:contentDescription="@string/ivNext"
                app:layout_constraintLeft_toRightOf="@id/ivPlay"
                app:layout_constraintRight_toLeftOf="@id/ivPlayList"
                app:layout_constraintTop_toTopOf="@id/ivPlay"
                app:tint="@color/white"
                />
            <ImageView
                android:id="@+id/ivPlayList"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:padding="8dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/ivPlay"
                android:src="@drawable/ic_bq_player_music_list"
                app:tint="@color/white"
                android:contentDescription="@string/ivPlayList"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>