<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="64dp"
    android:background="@color/colorTransparent"
    android:visibility="visible"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvCover"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:cardCornerRadius="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp">
        <ImageView
            android:id="@+id/ivCover"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background"
            android:contentDescription="@string/ivCover" />
    </androidx.cardview.widget.CardView>
    <com.atguigu.myownmusicapp.widget.MarqueTextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/testMarque"
        android:textSize="16sp"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:focusable="true"
        android:textColor="@color/textviewColor"
        android:singleLine="true"
        android:scrollHorizontally="true"
        android:focusableInTouchMode="true"
        app:layout_constraintStart_toEndOf="@id/cvCover"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/ivStartOrPause" />
    <ImageView
        android:id="@+id/ivPlayQueue"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/ic_queue_music"
        android:contentDescription="@string/ivPlayQueue"
        android:layout_marginEnd="16dp"
        app:tint="@color/textviewColor" />
    <ImageView
        android:id="@+id/ivStartOrPause"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_play"
        app:layout_constraintRight_toLeftOf="@id/ivPlayQueue"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/ivStartOrPause"
        app:tint="@color/textviewColor" />


</androidx.constraintlayout.widget.ConstraintLayout>